# books

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
config/: settings_example.yaml
src/books/: runner.py
src/books/application/: config.py  run.py
src/books/application/base/: singleton.py
src/books/application/use_cases/: auth_use_cases.py  authors_use_cases.py  books_use_cases.py  comments_use_cases.py  ratings_use_cases.py
src/books/domain/entities/: author_entities.py  book_entities.py  comment_entities.py  file_entities.py  rating_entities.py  token_entities.py  user_entities.py
src/books/domain/exceptions/: auth_exceptions.py  authors_exceptions.py  books_exceptions.py  comments_exceptions.py  core_exceptions.py  ratings_exceptions.py
src/books/domain/protocols/auth/: broker_protocols.py  db_protocols.py  password_protocols.py  storage_protocols.py  token_protocols.py
src/books/domain/protocols/authors/: db_protocols.py
src/books/domain/protocols/books/: db_protocols.py
src/books/domain/protocols/comments/: db_protocols.py
src/books/domain/protocols/ratings/: db_protocols.py
src/books/infra/broker/adapter/: redis_adapter.py
src/books/infra/broker/repositories/: auth_broker_repositories.py
src/books/infra/db/adapter/: postgre_adapter.py
src/books/infra/db/models/: __init__.py  author_model.py  book_model.py  comment_model.py  rating_model.py  user_model.py
src/books/infra/db/models/base/: base_model.py
src/books/infra/db/models/mixins/: model_mixins.py
src/books/infra/db/repositories/: auth_db_repositories.py  authors_db_repositories.py  books_db_repositories.py  comments_db_repositories.py  ratings_db_repositories.py
src/books/infra/mappers/: authors_mappers.py  books_mappers.py  comments_mappers.py  user_mappers.py
src/books/infra/security/repositories/: password_services.py  token_service.py
src/books/infra/storage/repositories/: storage_service.py
src/books/presentation/di/: auth_di.py  authors_di.py  books_di.py  comments_di.py  ratings_di.py
src/books/presentation/exceptions/: exceptions.py
src/books/presentation/permissions/: permissions.py
src/books/presentation/routers/: __init__.py  auth_router.py  authors_router.py  books_router.py  comments_router.py  rating_router.py
src/books/presentation/schemas/: auth_schemas.py  authors_shemas.py  books_schemas.py  comments_schemas.py  mixins_schemas.py  ratings_schemas.py
src/books/presentation/schemas/mixins/: auth_mixins_schemas.py
src/books/presentation/validators/: auth_validators.py  base_validators.py  books_validators.py
tests/: conftest.py  postgres_adapter_for_tests.py
tests/e2e/: conftest.py  test_auth.py  test_authors.py  test_books.py  test_comments.py  test_rating.py
tests/fixtures_data/: base64_data.py
